[package]
name = "compression_testing"
version = "0.1.0"
authors = ["oyvindln <oyvindln@users.noreply.github.com>"]

[dependencies]
deflate = { version = "0.7" , features = ["gzip"]}
flate2 = "1.0"
libflate = "0.1"
byteorder = "*"
inflate = "*"
clap = "2.24"
term = "0.2"
#pretty_assertions = "*"
miniz_oxide = "0.1.2"

[profile.release]
debug = true
#lto = true
#panic = 'abort'

#[profile.dev]
#opt-level = 1
